Fix context menus on KMenu

QMenu::activeAction() is already 0 when the action is emitted.

BUG: 218485
BUG: 221123

svn path=/trunk/KDE/kdelibs/; revision=1070420